# investment_returns_simulator

./: A.csv  AA.csv  AACT.csv  AAPL.csv  AASCX.csv  AASMX.csv  AAUTX.csv  ABBV.csv  ABCL.csv  ABPRX.csv  ACFCX.csv  ACFOX.csv  ACFSX.csv  ACSLX.csv  ACTVX.csv  ACWIX.csv  ACWZX.csv  ADBE.csv  ADC.csv  ADP.csv  ADSK.csv  ADTN.csv  ADTTF.csv  AEMFF.csv  AES.csv  AFCLX.csv  AFCMX.csv  AFCNX.csv  AFCSX.csv  AFDCX.csv  AFDIX.csv  AFEIX.csv  AFL.csv  AFVZX.csv  AFYA.csv  AFYDX.csv  AGCHX.csv  AGIZX.csv  AGL.csv  AGRO.csv  (+1720 more)
.dvc/: config
stats_data/: stats_data_1755478522.643751.csv  stats_data_1755483230.7616458.csv  stats_data_1755484056.4584894.csv  stats_data_1755484749.8168664.csv  stats_data_1755522012.2137034.csv  stats_data_1755522070.5912838.csv  stats_data_1755543634.072784.csv  stats_data_1755543843.8070202.csv  stats_data_1755543865.4399343.csv  stats_data_1755543893.0530314.csv  stats_data_1755543912.1212764.csv  stats_data_1755543949.6785362.csv  stats_data_1755543966.5223687.csv  stats_data_1755543998.24589.csv  stats_data_1755544057.000434.csv  stats_data_1755544070.0562544.csv  stats_data_1755544111.694515.csv  stats_data_1755544173.1183038.csv  stats_data_1755568592.2312298.csv  stats_data_1755570941.7555184.csv  stats_data_1755570989.965573.csv  stats_data_1755573179.1061258.csv  stats_data_1755573428.1538527.csv  stats_data_1755573610.9506416.csv  stats_data_1755574009.3160462.csv  stats_data_1755575841.2578888.csv  stats_data_1755576541.3253899.csv  stats_data_1755612276.5462255.csv  stats_data_1755615010.873734.csv  stats_data_1755656303.4136076.csv  (+2 more)
(+7045 files in other folders)
