[project]
name = "investment-returns-simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "angelomp2001",email = "apassala@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[gdrive] (>=3.67.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "investment_returns_simulator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
