[project]
name = "investment-returns-simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "angelomp2001",email = "apassala@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[gdrive] (>=3.67.1,<4.0.0)",
    "pandas (>=3.0.5,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "supabase (>=2.31.0,<3.0.0)",
    "ttkbootstrap (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.11.1,<4.0.0)",
    "yfinance (>=1.5.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "investment_returns_simulator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
